# sphinx-markdown-builder

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test_builder.py
.github/ISSUE_TEMPLATE/: bug_report.md  discrepancy_report.md
.github/workflows/: test.yaml
docs-tests/: ExampleRSTFile.rst  Section_course_student.rst  __expected.md  auto-summery.rst  conf.py  index.rst  links.rst
docs-tests/_expected/: ExampleRSTFile.md  auto-summery.md  index.md  links.md
docs-tests/my_module/submodule/: my_class.py
examples/javascript/docs/: conf.py
sphinx_markdown_builder/: __init__.py  builder.py  cmd.py  concat.py  contexts.py  decorators.py  escape.py  translator.py  writer.py
tests/: __init__.py  test_builder.py  test_unit.py
tests/expected/: ExampleRSTFile.md  Section_course_student.md  auto-summery.md  blocks.md  empty.md  glossaries.md  http-auto-summery.md  image-target.md  index.md  needtable.md  overrides-auto-summery.md
tests/my_module/: __init__.py  module_class.py
tests/my_module/submodule/: __init__.py  my_class.py
tests/source/: ExampleRSTFile.rst  Section_course_student.rst  auto-summery.rst  blocks.rst  conf.py  empty.rst  glossaries.rst  image-target.rst  index.rst  links.rst  needtable.rst
